small fix overflow

--- a/source/sass/blocks/services-card.scss
+++ b/source/sass/blocks/services-card.scss
@@ -51,7 +51,7 @@
   margin: 0;
   max-width: 170px;
   z-index: 4;
-  height: 90px;
+  height: 180px;
   overflow-y: auto;
 
   scrollbar-width: thin;
